force-app/src/objects/fferpcore__ERPProduct__c.object
<CustomObject>
    <customHelpPage>fferpcore__ErpProductHelp</customHelpPage>
    <description>Stores details of apps that send and receive information using Foundations messaging.</description>
    <fields>
        <fullName>fferpcore__Custom__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not this linked product has been made by the user</description>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No longer in use.</description>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__ServicePack__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Pack</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__VersionMajor__c</fullName>
        <label>Major Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__VersionMinor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minor Version</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Registered Product</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__DeveloperName__c</columns>
        <columns>fferpcore__VersionMajor__c</columns>
        <columns>fferpcore__VersionMinor__c</columns>
        <columns>fferpcore__ServicePack__c</columns>
        <columns>fferpcore__Obsolete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registered Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>